--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" class="cye-nm">
 
@@ -150,7 +150,7 @@
                     <td width="670">
                         <div id="toptitle">
                             <!-- change the follow as the page iner title-->
-                            <h1><a href='put your homepage website here'>Your name</a> &nbsp; <a href='put your homepage website here'>中文名</a> </h1>
+                            <h1><a href='put your homepage website here'>Old Man</a> &nbsp; <a href='put your homepage website here'>老卓</a> </h1>
                             <h1>
 
                             </h1>
@@ -158,8 +158,8 @@
                         <h3>Ph.D Student</a>
                         </h3>
                         <p>
-                            <a href=''>School of ....</a> &nbsp; <a href=''>xxxx学院</a> <br>
-                            <a href=''>South China University of Technology</a> &nbsp; <a href=''>xxx大学</a> <br>
+                            <a href=''>School of ....</a> &nbsp; <a href=''>电子与电气工程学院</a> <br>
+                            <a href=''>South China University of Technology</a> &nbsp; <a href=''>没有大学</a> <br>
                             <br> Email: <a href="mailto:yourmail@outlook.com">yourmail@outlook.com</a><br>
                             <!-- change the follow to your link-->
                             LinkedIn: <a href="https://www.linkedin.com/in/chenyirong/">https://www.linkedin.com/in/chenyirong</a><br> Github: <a href="https://github.com/scutcyr/">https://github.com/scutcyr</a><br> Publons: <a href="https://publons.com/researcher/3026890/yirong-chen/">https://publons.com/researcher/3026890/yirong-chen</a><br>                            ORCID: <a href="http://orcid.org/0000-0002-0207-0067/">http://orcid.org/0000-0002-0207-0067</a><br> ResearchGate: <a href="https://www.researchgate.net/profile/Yirong_Chen7">https://www.researchgate.net/profile/Yirong_Chen7</a><br>                            CSDN: <a href="https://blog.csdn.net/m0_37201243">https://blog.csdn.net/m0_37201243</a><br>
